--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,6 @@ jdk:
 script:
   - sbt clean coverage test
 after_success:
-  - sbt coverageReport coveralls
+  - sbt coverageReport
   - bash <(curl -s https://codecov.io/bash)
 sudo: false
