#27 updated scalc from 2.12.2 to 2.12.3

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,6 @@
 language: scala
 scala:
-    - 2.12.2
+    - 2.12.3
 jdk:
     - oraclejdk8
 script:
@@ -9,3 +9,10 @@ after_success:
   - sbt coverageReport dependencyCheck
   - bash <(curl -s https://codecov.io/bash)
 sudo: false
+notifications:
+  email:
+    recipients:
+      - dmitry.krivaltsevich@gmail.com
+    on_success: never  # default: change
+    on_failure: always # default: always
+ 
